# rules_ts_worker_repro

./: .bazelignore  .gitignore  WORKSPACE
internal/macros/: ts_project.bzl
src/nodejs/: .eslintrc.json  .prettierignore  BUILD.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
src/nodejs/.aspect/external_repository_action_cache/: npm_translate_lock_MTU0MTAyODI3Mw==
src/nodejs/libraries/example_lib/: BUILD.bazel  package.json
src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap/: BUILD.bazel  jest.config.js  tsconfig.json
src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap/pages/: BUILD.bazel  _app.tsx  index.test.tsx  index.tsx
src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap/pages/api/: BUILD.bazel
src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap/public/: BUILD.bazel
src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap/styles/: BUILD.bazel
