load("//internal/macros:ts_project.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "example_lib_ts",
    srcs = ["main.ts"],
    allow_js = True,
    composite = True,
    # runtime direct dependencies of the linked npm package
    data = [
        "//src/nodejs:node_modules/is-odd",
    ],
    declaration = True,
    resolve_json_module = True,
    tsconfig = "//src/nodejs:tsconfig",
    visibility = ["//visibility:public"],
    # transpile time direct dependencies
    deps = [
        "//src/nodejs:node_modules/@types/is-odd",
        "//src/nodejs:node_modules/@types/node",
    ],
)

# make this library available via node_modules
npm_package(
    name = "example_lib",
    srcs = [
        "package.json",
        ":example_lib_ts",
    ],
    # This is a perf improvement; the default will be flipped to False in rules_js 2.0
    include_runfiles = False,
    visibility = ["//visibility:public"],
)
