load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//src/nodejs/nextjs_bootstrap/src:__subpackages__"],
    deps = [
        "//src/nodejs:node_modules/@emotion/react",
        "//src/nodejs:tsconfig",
    ],
)

js_library(
    name = "jest_config",
    srcs = ["jest.config.js"],
    visibility = ["//visibility:public"],
)
