load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "pages",
    srcs = [
        "_app.tsx",
        "index.tsx",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    preserve_jsx = False,
    resolve_json_module = True,
    tsconfig = "//src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap:tsconfig",
    visibility = ["//src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap:__subpackages__"],
    deps = [
        "//src/nodejs:node_modules/@types/node",
    ],
)

ts_project(
    name = "specs",
    srcs = [
        "index.test.tsx",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    preserve_jsx = False,
    resolve_json_module = True,
    tsconfig = "//src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap:tsconfig",
    deps = [
        "//src/nodejs:node_modules/@types/node",
        "//src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap/pages",
    ],
)
