load("//internal/macros:ts_project.bzl", "ts_project")

ts_project(
    name = "api",
    srcs = [
        "hello.ts",
    ],
    allow_js = True,
    composite = True,
    declaration = True,
    preserve_jsx = False,
    resolve_json_module = True,
    tsconfig = "//src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap:tsconfig",
    visibility = ["//src/nodejs/nextjs_bootstrap/src/nextjs_bootstrap/pages:__subpackages__"],
    deps = [
        "//src/nodejs:node_modules/@types/node",
        "//src/nodejs:node_modules/@types/react",
        "//src/nodejs:node_modules/@types/react-dom",
        "//src/nodejs:node_modules/next",
    ],
)
